<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@color/Olive"
    android:weightSum="100">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/DarkSalmon"
        android:weightSum="20"
        android:layout_weight="20">
        <TextView
            android:id="@+id/contentRes"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="0"
            android:textAlignment="gravity"
            android:gravity="center_vertical"
            android:textSize="30sp"
            android:background="@color/DarkSalmon"
            android:layout_weight="19"/>
        <TextView
            android:id="@+id/status"
            android:background="@color/AshGrey"
            android:layout_width="30dp"
            android:gravity="center"
            android:textAlignment="gravity"
            android:layout_height="match_parent"
            android:text="="
            android:textSize="30sp"
            android:layout_weight="1"/>
    </LinearLayout>
    <TextView
        android:id="@+id/content"
        android:layout_weight="30"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="right"
        android:textAlignment="gravity"
        android:textSize="40sp"
        android:layout_marginTop="3dp"
        android:background="@color/AshGrey"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="10">
        <Button
            android:id="@+id/buttonSqrt"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="sqrt"
            android:textAllCaps="false"/>
        <Button
            android:id="@+id/buttonMod"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="%"/>
        <Button
            android:id="@+id/buttonC"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="C"/>

        <Button
            android:id="@+id/buttonX"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="X" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="10">
        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="7"/>
        <Button
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="8"/>
        <Button
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="9"/>

        <Button
            android:id="@+id/buttonDiv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="/" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="10">
        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="4"/>
        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="5"/>
        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="6"/>

        <Button
            android:id="@+id/buttonMul"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="*" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="10">
        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="1"/>
        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="2"/>
        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="3"/>

        <Button
            android:id="@+id/buttonSub"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="-" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="10">
        <Button
            android:id="@+id/buttonDot"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="."/>
        <Button
            android:id="@+id/button0"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="0"/>
        <Button
            android:id="@+id/buttonEqual"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="="/>

        <Button
            android:id="@+id/buttonAdd"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="+" />
    </LinearLayout>
</LinearLayout>